article base done

--- a/latex-pohja/referaattipohja/malli.tex
+++ b/latex-pohja/referaattipohja/malli.tex
@@ -74,12 +74,10 @@
 \title{Esimerkkiotsikko}
 \author{Eija Esimerkki}
 \date{\today}
-\level{Seminaariraportti}
-\abstract{Tiivistelmä.}
+\level{Referaatti}
 
 % The following can be used to specify keywords and classification of the paper:
 
-\keywords{avainsana 1, avainsana 2, avainsana 3}
 
 % classification according to ACM Computing Classification System (http://www.acm.org/about/class/)
 % This is probably mostly relevant for computer scientists
@@ -114,7 +112,6 @@
 \frontmatter      % roman page numbering for front matter
 
 \maketitle        % title page
-\makeabstract     % abstract page
 
 \tableofcontents  % table of contents
 
@@ -122,11 +119,28 @@
 
 \mainmatter       % clear page, start arabic page numbering
 
-\section{Esimerkkiluku}
+\section{Johdanto}
 
 % Write some science here.
 
 Esimerkkilause ja lähdeviite~\cite{esimerkki}.
+
+
+
+\section{Tutkimusasetelma}
+
+Asetelmaa.
+
+\section{Tulokset}
+
+Tulokset.
+
+\section{Yhteenveto}
+
+Yhteenveto.
+
+
+
 
 
 % --- References ---
