--- a/referaatti/malli.tex
+++ b/referaatti/malli.tex
@@ -113,7 +113,7 @@
 
 \maketitle        % title page
 
-\tableofcontents  % table of contents
+% \tableofcontents  % table of contents
 
 % --- Main matter ---
 
@@ -123,21 +123,8 @@
 
 % Write some science here.
 
-Esimerkkilause ja lähdeviite~\cite{esimerkki}.
+Tähän tulee referaatti. HUOM. poista väliotsikot...
 
-
-
-\section{Tutkimusasetelma}
-
-Asetelmaa.
-
-\section{Tulokset}
-
-Tulokset.
-
-\section{Yhteenveto}
-
-Yhteenveto.
 
 
 
@@ -153,8 +140,8 @@ Yhteenveto.
 %
 % instead.
 
-\bibliographystyle{babalpha-lf}
-\bibliography{references-fi}
+%\bibliographystyle{babalpha-lf}
+%\bibliography{references-fi}
 
 
 % --- Appendices ---
