--- a/referaatti/malli.tex
+++ b/referaatti/malli.tex
@@ -114,7 +114,7 @@
 
 \frontmatter      % roman page numbering for front matter
 
-\maketitle        % title page
+ \maketitle        % title page
 
 % \tableofcontents  % table of contents
 
@@ -124,24 +124,25 @@
 
 % Write some science here.
 
-Wilbert Seelen, Shaheen Syedin ja Sjaak Brinkkemperin julkaisemassa tutkimuksessa ``The Functional Architecture Modeling Method applied on Web Browsers`` vuodelta 2014 ottaa analysoitavaksi funktionaalisen arkkitehtuurin mallinnuksen (Functional Architecture Modelling), jonka pohja luotiin Sjaak Brinkkemperin ja Stella Pachidin julkaisussa ``Functional Architecture Modeling for the Software Product Industry`` vuodelta 2010. Tutkimuksessa kerrotaan menetelmä luoda funktionaalinen malli kehitettävänä olevasta järjestelmästä. Itse analysointi julkaisussa tapahtuu tapaustutkimuksen kautta, jossa analysoidaan mallin toimivuutta luomalla funktionaalinen malli kuvitteellisesta web-selaimesta. Tätä mallia verrataan toiseen tutkimukseen, jossa koodianalyysi-työkalulla luotiin korkean tason malli oikean maailman web-selaimen lähdekoodista. Funktionaalisen arkkitehtuurin mallinnus kyseisellä metodilla koettiin onnistuneeksi, koska mallit vastasivat loppuanalyysissä toisiaan.\\
+Wilbert Seelen, Shaheen Syedin ja Sjaak Brinkkemperin julkaisemassa tutkimuksessa ``The Functional Architecture Modeling Method applied on Web Browsers`` (2014) ottaa analysoitavaksi funktionaalisen arkkitehtuurin mallinnuksen (Functional Architecture Modelling), jonka pohja luotiin Sjaak Brinkkemperin ja Stella Pachidin julkaisussa ``Functional Architecture Modeling for the Software Product Industry`` (2010). Tutkimuksessa esitetään menetelmä  funktionaalisen mallin luomiseen kehitettävänä olevasta järjestelmästä. Itse analysointi suoritetaan tapaustutkimuksen kautta, jossa analysoidaan mallin toimivuutta luomalla funktionaalinen malli kuvitteellisesta web-selaimesta. Tätä mallia verrataan toiseen tutkimukseen, jossa koodianalyysi-työkalulla luotiin korkean tason malli web-selaimen lähdekoodista. Funktionaalisen arkkitehtuurin mallinnus metodilla koettiin onnistuneeksi, koska mallit vastasivat loppuanalyysissä toisiaan.\\
 
-Tutkimus ``The Functional Architecture Modeling Method applied on Web Browsers`` alkaa kertomalla, että arkkitehtuurin design ja dokumentointi on projekteissa usein keskeneräistä tai puuttuu jopa kokonaan. Tähän ongelmaan he esittävät ratkaisuksi funktionaalisen arkkitehtuurin mallinnuksen. He väittävät, että tämä arkkitehtuurin mallinnustapa on virtaviivaistettu tyyli, joka antaa tilaa nopeille arkkitehtuurin iteraatiolle, koska keskittyminen on ollut mallin helppokäyttöisyydessä ja kommunikaatioon tärkeydessä. Tämä uusi malli myös yhdistää funktionaalista ja teknistä arkkitehtuuria ja antaa täten visualisaation järjestelmän ydintoiminnallisuuteen.  
+Arkkitehtuurin design ja dokumentointi on projekteissa usein keskeneräistä tai puuttuu jopa kokonaan. Tähän ongelmaan he esittävät ratkaisuksi funktionaalisen arkkitehtuurin mallinnuksen. He esittävät, että kyseinen arkkitehtuurin mallinnustapa on virtaviivaistettu tyyli, joka antaa tilaa nopeille arkkitehtuurin iteraatiolle, koska keskittyminen on ollut mallin helppokäyttöisyydessä ja kommunikaation tärkeydessä. Tämä uusi malli myös yhdistää funktionaalista ja teknistä arkkitehtuuria ja antaa täten helpon visualisaation järjestelmän ydintoiminnallisuuteen.  
 
-Tutkimuksen tarkoituksena on ollut pienentää dokumentoinnin ja lopullisen toiminnallisuuden välistä kuilua uuden funktionaalisen mallin avulla. He jatkavat kertomalla, että itse mallilla on kaksi päätarkoitusta: mahdollistaa selkeä korkean tason näkymä projektiin sekä ylläpitää hyviä käytänneitä ohjelmoinnissa, koska se pakottaa jakamaan toteutettavan järjestelmän erillisiin toiminnallisiin moduuleihin jo projektin alkuvaiheessa. He määrittelevät vastattavan tutkimuskysymyksen muodossa: ``Miten toiminnallisuutta voidaan ilmaista ohjelmistoarkkitehtuurien malleissa?``, johon he vastaavat, että adaptoimalla Brinkkeemperin ja Pachidin luomaa mallia. 
+Tutkimuksen tarkoituksena on ollut pienentää dokumentoinnin ja lopullisen toiminnallisuuden välistä kuilua uuden funktionaalisen mallin avulla. Mallilla on kaksi päätarkoitusta: mahdollistaa selkeä korkean tason näkymä projektiin sekä ylläpitää hyviä käytänteitä ohjelmoinnissa, koska malli pakottaa jakamaan toteutettavan järjestelmän erillisiin toiminnallisiin moduuleihin jo projektin alkuvaiheessa. Tutkimuskysymyksenä on, miten toiminnallisuutta voidaan ilmaista ohjelmistoarkkitehtuurien malleissa, mikä tapahtuu soveltamalla Brinkkeemperin ja Pachidin luomaa mallia. 
 
 \iffalse
 Nykyisestä kirjallisuudesta he etsivät materiaalia tutkimuksen tueksi funktionaalisen arkkitehtuurin mallinnuksesta ja vaatimuksista ohjelmistoarkkitehtuurin mallinnuksessa.
 Funktionaalisen arkkitehtuurin mallinuksesta he viittaavat Brinkkemperin tutkimukseen, jossa tutkittiin funktionaalisen arkkitehtuurin diagrammien käyttöä ja jonka tulos oli, että niiden käyttö on rajoittunutta tiettyihin alueisiin ja usein rakenteiltaan sekavahkoa. He jatkavat viittaamalla myös Vlietin tutkimukseen, jossa tultiin päätelmään, että arkkitehtuurin suunnittelun pitäisi sijaita vaatimusten keräysten ja teknisen suunnittelun välissä. 
 Vaatimuksista 
 \fi
-Tämän jälkeen he ottavat esille nykyisten arkkitehtuurien kuvauskielten (ADL) ongelmia; yrittävät mallintaa koko järjestelmän arkkitehtuuria laajamittaisesti, eivät täytä suunnittelijoiden vaatimuksia, vaikeasti ymmärrettäviä sekä tukevat vain yhtä näkymää arkkitehtuurista. He kiinnitävät huomion UML-malliin, josta on tullut heidän mukaansa nykypäivänä yleistynyt standardi erilaisten arkkitehtuurien kuvauksessa. Syy tähän on, että UML on kevyempi käyttää ja visuaalisen muotonsa takia helpommin lähestyttävä. 
 
-Tutkimuksessa itse menetelmä arkkitehtuurin kuvaukseen, joka on muokattu hieman aiemmasta ``Functional Architecture Modeling for the Software Product Industry``-julkaisusta, ei enää keskity niin paljon moduläärisyyteen, vaihtelevuuteen tai yhteentoimivuuteen kuten aiemmassa, vaan siinä on haluttu korostaa helppokäyttöisyyttä, kommunikoinnin tärkeyttä, tukea useille näkymille, rajoittavuuden vähentämistä sekä nykyisiä hyväksi tunnettuja käytänneitä mallien kuvauksessa. Itse luotu malli koostuu neljästä eri vaiheesta: vaatimusten keräys, ominaisuuksien mallinnus (feature modelling), toiminnallisen arkkitehtuurin suunnitteleminen ja lopuksi teknisen arkkitehtuurin suunnitteleminen. Vaatimusten keräyksessä kerättään toiminnalliset ja tekniset vaatimuksen osakkailta (stakeholder); ominaisuuksien mallinnuksessa vaatimukset yhdistetään niille ominaisten teemojen mukaan; toiminnallisen arkkitehtuurin suunnittelemisessa edellisen vaiheen tuotokset yhdistetään erillisiksi moduuleiksi, joiden välille määritellään yhteydet ja niiden tyypit; toiminnallisen arkkitehtuurin suunnittelemisessa moduuleita tarkennetaan teknisten vaatimusten avulla. Lopullinen dokumentaatio, joka on käytännössä UML-tyylinen malli ja josta nähdään koko järjestelmän keskeisimmät toiminnalliset ominaisuudet hyvin helposti, näytetään osakkaille yhteisissä tapaamisissa. Tätä mallia pystytään tapaamisissa tarkentamaan iteraatioittain osakkaille suotuisammaksi. Järjestelmän toteuttaminen on jo ensimmäisen tapaamisen jälkeen mahdollista aloittaa ohjelmoijien toimesta, koska toiminnallisuus on niin selvästi näkyvillä modulaarisessa kuvausmallissa, he väittävät. 
+Seelen et al. ottavat esille nykyisten arkkitehtuurien kuvauskielten (ADL) ongelmia. Nämä kielet yrittävät mallintaa koko järjestelmän arkkitehtuuria laajamittaisesti, eivät täytä suunnittelijoiden vaatimuksia, ovat vaikeasti ymmärrettäviä ja tukevat vain yhtä näkymää arkkitehtuurista. Huomio kiinnitetään UML-malliin, josta on tullut standardi erilaisten arkkitehtuurien kuvauksissa. Syy tähän on se, että UML on kevyempi käyttää ja visuaalisen muotonsa takia helpommin lähestyttävä.
 
-Tutkimuksessa analysoitiin metodin toimintaa tapaustutkimuksen kautta, jossa mallinnettiin web-selainta. Vaatimuksista mukaan otettiin vain ne vaatimukset, jotka ovat ydintoiminnallisuutta web-selaimelle, jolloin vertailua pystyttiin tekemään. Tapaustutkimuksessa luotiin ensin korkean tason näkymä, josta jokaista luotua moduulia sitten tarkennettiin tarpeen mukaisesti. Yhteensä he loivat kolme eri mallia tutkimuksessa: korkean tason toiminnallinen arkkitehtuuri, tarkennettu kuvaus eräästä moduulista sekä korkean tason tekninen arkkitehtuuri. Analysointivaiheessa tutkittiin, että miten tekninen arkkitehtuuri vastaa koodianalyysin avulla tuotettua arkkitehtuuria. Tuloksena saatiin, että ainoa poikkeavuus löytyi vain yhdestä moduulista, joka oli tutkimuksessa käytetyn metodin luoma ylimääräinen moduuli. Syy tälle löytyi heidän mukaansa siitä, että kyseinen moduuli on oikeissa selaimissa sulautettu muiden moduulien joukkoon. 
+Tutkimuksessa esitelty metodi perustuu toiminnallisen arkkitehtuurin kuvaukseen, joka on muokattu hieman aiemmasta ``Functional Architecture Modeling for the Software Product Industry``-julkaisusta. Se ei enää keskity niin paljon modulaarisuuteen, vaihtelevuuteen tai yhteentoimivuuteen, vaan siinä on haluttu korostaa helppokäyttöisyyttä, kommunikoinnin tärkeyttä, tukea useille näkymille, rajoittavuuden vähentämistä sekä nykyisiä hyväksi tunnettuja käytänteitä mallien kuvauksessa. Luotu malli koostuu neljästä eri vaiheesta: vaatimusten keräys, ominaisuuksien mallinnus (feature modelling), toiminnallisen arkkitehtuurin suunnitteleminen ja lopuksi teknisen arkkitehtuurin suunnitteleminen. Vaatimusten keräyksessä kerätään toiminnalliset ja tekniset vaatimukset osakkailta (stakeholder). Ominaisuuksien mallinnuksessa vaatimukset yhdistetään niille ominaisten teemojen mukaan. Toiminnallisen arkkitehtuurin suunnittelemisessa edellisen vaiheen tuotokset yhdistetään erillisiksi moduuleiksi, joiden välille määritellään yhteydet ja niiden tyypit, ja lopuksi moduuleita tarkennetaan teknisten vaatimusten avulla teknisen arkkitehtuurin suunnittelemisessa. Lopullinen dokumentaatio, joka on käytännössä UML-tyylinen malli ja josta nähdään koko järjestelmän keskeisimmät toiminnalliset ominaisuudet hyvin helposti, näytetään osakkaille yhteisissä tapaamisissa. Tätä mallia pystytään tarkentamaan iteraatioittain osakkaille suotuisammaksi. Näin ohjelmoijat voivat aloittaa järjestelmän toteuttamisen jo ensimmäisen tapaamisen jälkeen, koska toiminnallisuus on niin selvästi näkyvillä modulaarisessa kuvausmallissa. 
 
-Lopullisissa päätelmissä he tulivat tulokseen, että nykyiset arkkitehtuurin kuvauskielet eivät täytä arkkitehtien vaatimuksia, koska ne keskittyvät liian formaalisti kuvaamaan järjestelmän teknistä arkkitehtuuria. Tästä syytä heidän kehittämä metodi olisi hyvä, koska se tukee myös arkkitehtuurin kuvauskieliä (ADL) sekä epäformaalimpia piirrettyjä malleja. He saivat tämän ominaisuuden aikaiseksi yhdistämällä toiminnallisen mallinnuksen vaiheen järjestelmän arkkitehtuurin suunnittelemiseen.   
+Metodin toimintaa analysoitiin tapaustutkimuksen kautta, jossa mallinnettiin web-selainta. Mukaan otettiin vain ne vaatimukset, jotka ovat ydintoiminnallisuutta web-selaimelle, jolloin vertailua pystyttiin tekemään. Tapaustutkimuksessa luotiin ensin korkean tason näkymä, josta jokaista luotua moduulia tarkennettiin tarpeen mukaisesti. Yhteensä he loivat kolme eri mallia tutkimuksessa: korkean tason toiminnallinen arkkitehtuuri, tarkennettu kuvaus eräästä moduulista ja korkean tason tekninen arkkitehtuuri. Analysointivaiheessa tutkittiin, miten tekninen arkkitehtuuri vastaa koodianalyysin avulla tuotettua arkkitehtuuria. Tuloksista nähtiin, että ainoa poikkeavuus löytyi vain yhdestä moduulista, joka oli käytetyn metodin luoma ylimääräinen moduuli. Syy eroavaisuuteen johtui siitä, että kyseinen moduuli on oikeissa selaimissa sulautettu muiden joukkoon. 
+
+Lopullisissa päätelmissä he tulivat siihen tulokseen, että nykyiset arkkitehtuurin kuvauskielet eivät täytä arkkitehtien vaatimuksia, koska ne keskittyvät liian formaalisti kuvaamaan järjestelmän teknistä arkkitehtuuria. Tästä syytä heidän kehittämä metodi olisi hyvä, koska se tukee myös arkkitehtuurin kuvauskieliä sekä ei-muodollisia piirrettyjä malleja. He saivat tämän ominaisuuden aikaiseksi yhdistämällä toiminnallisen mallinnuksen vaiheen järjestelmän arkkitehtuurin suunnittelemiseen.   
  
 
 
