--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -6,3 +6,27 @@
   address = {Berliini},
   edition = {3.}
 }
+
+
+@incollection{gorton_understanding_2011,
+	title = {Understanding Software Architecture},
+	rights = {©2011 Springer-Verlag Berlin Heidelberg},
+	isbn = {978-3-642-19175-6 978-3-642-19176-3},
+	pages = {1--15},
+	booktitle = {Essential Software Architecture},
+	publisher = {Springer Berlin Heidelberg},
+	author = {Gorton, Ian},
+	urldate = {2016-02-14},
+	year = {2011},
+	langid = {english},
+	keywords = {{IT} in Business, Management of Computing and Information Systems, Software Engineering}
+}
+
+@book{esimerkki2,
+  title = {Test},
+  author = {Jack Pentium},
+  publisher = {Springer},
+  year = {2005},
+  address = {Berliini},
+  edition = {3.}
+}
