--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -22,6 +22,16 @@
 	keywords = {{IT} in Business, Management of Computing and Information Systems, Software Engineering}
 }
 
+@book{Rozanski:2011:SSA:2072649,
+ author = {Rozanski, Nick and Woods, Ein},
+ title = {Software Systems Architecture: Working With Stakeholders Using Viewpoints and Perspectives},
+ year = {2011},
+ isbn = {032171833X, 9780321718334},
+ edition = {2},
+ publisher = {Addison-Wesley Professional},
+} 
+
+
 @book{esimerkki2,
   title = {Test},
   author = {Jack Pentium},
