new source found

--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -28,15 +28,23 @@
  year = {2011},
  isbn = {032171833X, 9780321718334},
  edition = {2},
- publisher = {Addison-Wesley Professional},
+ publisher = {Addison-Wesley Professional}
 } 
 
 
-@book{esimerkki2,
-  title = {Test},
-  author = {Jack Pentium},
-  publisher = {Springer},
-  year = {2005},
-  address = {Berliini},
-  edition = {3.}
+@inproceedings{solms_what_2012,
+	location = {New York, {NY}, {USA}},
+	title = {What is Software Architecture?},
+	isbn = {978-1-4503-1308-7},
+	doi = {10.1145/2389836.2389879},
+	series = {{SAICSIT} '12},
+	pages = {363--373},
+	booktitle = {Proceedings of the South African Institute for Computer Scientists and Information Technologists Conference},
+	publisher = {{ACM}},
+	author = {Solms, Fritz},
+	year = {2012},
+	keywords = {reference architecture, software architecture},
 }
+
+
+
