--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -148,26 +148,24 @@ Viimeistä edellinen luku on varsinaisen kontribuution koti: vertailu, soveltami
 Jeejee. Paltu.
 
 \subsection{Ohjelmistojen arkkitehtuuri käsitteenä}
-Arkkitehtuuri ohjelmistoissa on käsite, josta moni on tietoinen mutta joka ei ole kovin yksiselitteinen ja joskus jopa vaikeaa pukea konkreettisiksi asioiksi. Arkkitehtuuri voidaan nimittäin nähdä karkeasti neljästä eri näkökulmasta  \citep[s. 2-7]{gorton_understanding_2011}:  ohjelmiston rakenteen kuvaajana, kuvaajana ohjelmiston komponenttien välisille suhteille, mallina joka ottaa huomioon ei-toiminnalliset (non-functional) vaatimukset ja abstraktiona. 
+Arkkitehtuuri ohjelmistoissa on käsite, josta moni on tietoinen mutta joka ei ole kovin yksiselitteinen eikä siitä olla yksimielisiä \cite{solms_what_2012}. Arkkitehtuuri voidaan kuitenkin nähdä karkeasti neljästä eri näkökulmasta  \citep[s. 2-7]{gorton_understanding_2011}:  ohjelmiston rakenteen kuvaajana, kuvaajana ohjelmiston komponenttien välisille suhteille, mallina joka ottaa huomioon ei-toiminnalliset (non-functional) vaatimukset ja yleisenä abstraktiona. 
 
 % kappaleessa selitetään myös riippuvuuksien vähentämisestä
-\paragraph{Rakenteen kuvaaja}
-Arkkitehtuuri määrittelee ohjelmistojärjestelmän sisäistä rakennetta, joka koostuu useista komponenteista sekä moduuleista. Erilaiset moduulit tekevät tiettyä työtä ja täten erilaiset vastuut on jaettu ohjelmistojärjestelmän sisällä loogiisiin kokoelmiin ja kokoelmat tarjoavat halutun toiminnallisuuden.
-
+Rakenteen kuvaajana arkkitehtuuri määrittelee ohjelmistojärjestelmän sisäistä rakennetta, joka koostuu useista komponenteista sekä moduuleista. Erilaiset moduulit tekevät tiettyä työtä ja täten erilaiset vastuut on jaettu ohjelmistojärjestelmän sisällä loogiisiin kokoelmiin ja näistä syntyvät kokoelmat tarjoavat halutun toiminnallisuuden.
 % kappaleessa myös patterneja
-\paragraph{Komponenttien välisien suhteiden kuvaaja}
-Komponenttien välisen kommunikaation mallintaminen tulee vastaan, kun ohjelmistojärjestelmää jaetaan erilaisiin komponentteihin. Tavoitteena on kertoa mitkä komponentit tai moduulit ovat vuorovaikutuksessa toistensa kanssa ja millä tavoin. 
-
+Komponenttien välisen kommunikaation mallintaminen tulee vastaan, kun ohjelmistojärjestelmää jaetaan erilaisiin komponentteihin. Tavoitteena on kertoa mallintamalla, että mitkä komponentit tai moduulit ovat vuorovaikutuksessa toistensa kanssa ja millä tavoin. Yleisin kommunikaatiotapa on esimerkiksi suorat funktiokutsut komponenttien välillä.  
 % kappaleessa ei-toiminnallisten vaatimuksien jako kolmeen eri luokkaan
-\paragraph{Mallina, joka konkretisoi ei-toiminnalliset vaatimukset}
-Arkkitehtuurin avulla voidaan määrittää miten ohjelma suorittaa sille määrättyä tehtävää sen sijasta, että mallinnettaisiin mitä ohjelma tekee. 
+Ei-toiminnaliset vaatimukset tulevat esille vasta arkkitehtuurin avulla ja arkkitehtuurin mallinnuksen avulla voidaan määrittää miten ohjelma suorittaa sille määrättyä tehtävää sen sijasta, että mallinnettaisiin mitä ohjelma tekee. 
+% lähteitä lisää?
+Arkkitehtuurin avulla on mahdollista myös abstrahoida osakkaille (stakeholder) ja muille kehittäjille ohjelmistojärjestelmää helpommin lähestyttäväksi, jolloin kommunikaatio eri osapuolten välillä helpottuu. Abstrahoinnin avulla pystytään yksinkertaistamaan järjestelmän konkreettista toteutusta ja suorittamaan arkkitehtuurista erittelyä (architectural decomposition), jossa muodostetaan epärelevanteista komponenteista mustia laatikoita (black box). Mustien laatikoiden ideana on piilottaa komponenttien sisäistä toteutusta eri tasoilla, jolloin arkkitehtuurista voidaan muodostaa eri abstraktiotason malleja.
 
-\paragraph{Abstraktiona}
-Arkkitehtuurin avulla voidaan abstrahoida osakkaille (stakeholder) ja muille kehittäjille ohjelmistojärjestelmä helpommin lähestyttäväksi, jolloin kommunikaatio helpottuu. Abstrahoinnin avulla pystytään yksinkertaistamaan järjestelmän konkreettista toteutusta ja suorittamaan arkkitehtuurista erittelyä (architectural decomposition), jossa muodostetaan epärelevanteista komponenteista mustia laatikoita (black box). Mustien laatikoiden ideana on piilottaa komponenttien sisäistä toteutusta eri tasoilla, jolloin arkkitehtuurista voidaan muodostaa eri abstraktiotason malleja.
+Erilaiset näkymät on tärkeitä, koska niillä voidaan kuvata arkkitehtuuria + lähteet \cite{solms_what_2012}.
 
 \subsection{Kuvaustyylit/Näkymät}
 % sama lähde kuin aiemmin + Software systems architecture 2nd ed.
 \cite{Rozanski:2011:SSA:2072649}
+
+%onko testatavuus missäkin tapauksessa eri näkymien yli menevä vai voiko tai kannattaako sille jossain tilanteessa olla ihan oma näkymänsä, ja jos niin millainen se sitten olisi
 
 \subsection{Arkkitehtuuri osana ohjelmistonkehitystä}
 
