--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -148,7 +148,7 @@ Viimeistä edellinen luku on varsinaisen kontribuution koti: vertailu, soveltami
 Jeejee. Paltu.
 
 \subsection{Ohjelmistojen arkkitehtuuri käsitteenä}
-Arkkitehtuuri ohjelmistoissa on käsite, josta moni on tietoinen mutta joka ei ole kovin yksiselitteinen eikä siitä olla yksimielisiä \cite{solms_what_2012}. Arkkitehtuuri voidaan kuitenkin nähdä karkeasti neljästä eri näkökulmasta  \citep[s. 2-7]{gorton_understanding_2011}:  ohjelmiston rakenteen kuvaajana, kuvaajana ohjelmiston komponenttien välisille suhteille, mallina joka ottaa huomioon ei-toiminnalliset (non-functional) vaatimukset ja yleisenä abstraktiona. 
+Arkkitehtuuri ohjelmistoissa on käsite, josta moni kehittäjä on tietoinen mutta joka ei ole kovin yksiselitteinen eikä siitä ole yksimielisiä \cite{solms_what_2012} määritelmää. Arkkitehtuuri voidaan kuitenkin nähdä karkeasti neljästä eri näkökulmasta  \citep[s. 2-7]{gorton_understanding_2011}:  ohjelmiston rakenteen kuvaajana, kuvaajana ohjelmiston komponenttien välisille suhteille, mallina joka ottaa huomioon ei-toiminnalliset (non-functional) vaatimukset ja yleisenä abstraktiona. 
 
 % kappaleessa selitetään myös riippuvuuksien vähentämisestä
 Rakenteen kuvaajana arkkitehtuuri määrittelee ohjelmistojärjestelmän sisäistä rakennetta, joka koostuu useista komponenteista sekä moduuleista. Erilaiset moduulit tekevät tiettyä työtä ja täten erilaiset vastuut on jaettu ohjelmistojärjestelmän sisällä loogiisiin kokoelmiin ja näistä syntyvät kokoelmat tarjoavat halutun toiminnallisuuden.
@@ -158,6 +158,8 @@ Komponenttien välisen kommunikaation mallintaminen tulee vastaan, kun ohjelmist
 Ei-toiminnaliset vaatimukset tulevat esille vasta arkkitehtuurin avulla ja arkkitehtuurin mallinnuksen avulla voidaan määrittää miten ohjelma suorittaa sille määrättyä tehtävää sen sijasta, että mallinnettaisiin mitä ohjelma tekee. 
 % lähteitä lisää?
 Arkkitehtuurin avulla on mahdollista myös abstrahoida osakkaille (stakeholder) ja muille kehittäjille ohjelmistojärjestelmää helpommin lähestyttäväksi, jolloin kommunikaatio eri osapuolten välillä helpottuu. Abstrahoinnin avulla pystytään yksinkertaistamaan järjestelmän konkreettista toteutusta ja suorittamaan arkkitehtuurista erittelyä (architectural decomposition), jossa muodostetaan epärelevanteista komponenteista mustia laatikoita (black box). Mustien laatikoiden ideana on piilottaa komponenttien sisäistä toteutusta eri tasoilla, jolloin arkkitehtuurista voidaan muodostaa eri abstraktiotason malleja.
+
+Hieman samanlainen jaottelu on määritelty myös Solmsin tutkimuksessa \citep[s. 369]{solms_what_2012}. Siinä ohjelmistoarkkitehtuuri-määritelmä jaetaan kolmeen eri määrittelyluokkaan: korkean tason abstraktioon ohjelmistojärjestelmästä, rakenteita korostavaan määritelmään ja peruskäsitteistöön sekä rajoitteisiin joiden puitteissa ohjelmistojärjestelmää kehitetään. Näistä kaksi ensimmäistä määritelmää vastaavat samoja kuin \cite{gorton_understanding_2011} määriteltyjen kanssa, mutta Solms tarkentaa kumpaakin omat kuvaustavat. Korkean tason abstraktioita mallinnetaan erilaisten näkymien kautta tai käyttämällä arkkitehtuurallisia malleja, jotka on määritelty tuettavaksi IEEE:n julkaisussa \cite{_ieee_2000}.    
 
 Erilaiset näkymät on tärkeitä, koska niillä voidaan kuvata arkkitehtuuria + lähteet \cite{solms_what_2012}.
 
