--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -46,7 +46,7 @@
 	keywords = {reference architecture, software architecture}
 }
 
-@article{_ieee_2000,
+@article{ieee_2000,
 	title = {{IEEE} Recommended Practice for Architectural Description of Software-Intensive Systems},
 	doi = {10.1109/IEEESTD.2000.91944},
 	abstract = {This recommended practice addresses the activities of the creation, analysis, and sustainment of architectures of software-intensive systems, and the recording of such architectures in terms of architectural descriptions . A conceptual framework for architectural description is established. The content of an architectural description is defined. Annexes provide the rationale for key concepts and terminology, the relationships to other standards, and examples of usage.},
