--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -27,6 +27,7 @@
  title = {Software Systems Architecture: Working With Stakeholders Using Viewpoints and Perspectives},
  year = {2011},
  isbn = {032171833X, 9780321718334},
+ pages = {31--43},
  edition = {2},
  publisher = {Addison-Wesley Professional}
 } 
