--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -58,4 +58,13 @@
 	file = {IEEE Xplore Abstract Record:files/98/abs_all.html:text/html}
 }
 
+@inproceedings{may2005survey,
+  title={A survey of software architecture viewpoint models},
+  author={May, Nicholas},
+  booktitle={Proceedings of the Sixth Australasian Workshop on Software and System Architectures},
+  pages={13--24},
+  year={2005},
+  organization={Citeseer}
+}
+
 
