viewpoints should be next?

--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -67,4 +67,21 @@
   organization={Citeseer}
 }
 
+@inproceedings{Ran:1998:ASV:288408.288438,
+ author = {Ran, Alexander},
+ title = {Architectural Structures and Views},
+ booktitle = {Proceedings of the Third International Workshop on Software Architecture},
+ series = {ISAW '98},
+ year = {1998},
+ isbn = {1-58113-081-3},
+ location = {Orlando, Florida, USA},
+ pages = {117--120},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/288408.288438},
+ doi = {10.1145/288408.288438},
+ acmid = {288438},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {architectural views, requirements, software architecture, structures of software},
+} 
 
