--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -149,7 +149,6 @@ Jeejee. Paltu.
 
 \subsection{Ohjelmistojen arkkitehtuuri käsitteenä}
 Arkkitehtuuri ohjelmistoissa on käsite, josta moni kehittäjä on tietoinen mutta joka ei ole kovin yksiselitteinen eikä siitä ole yksimielisiä määritelmää \cite{solms_what_2012}. Arkkitehtuuri voidaan kuitenkin nähdä karkeasti neljästä eri näkökulmasta  \citep[s. 2-7]{gorton_understanding_2011}:  ohjelmiston rakenteen kuvaajana, kuvaajana ohjelmiston komponenttien välisille suhteille, mallina joka ottaa huomioon ei-toiminnalliset (non-functional) vaatimukset ja yleisenä abstraktiona. 
-
 % kappaleessa selitetään myös riippuvuuksien vähentämisestä
 Rakenteen kuvaajana arkkitehtuuri määrittelee ohjelmistojärjestelmän sisäistä rakennetta, joka koostuu useista komponenteista sekä moduuleista. Erilaiset moduulit tekevät tiettyä työtä ja täten erilaiset vastuut on jaettu ohjelmistojärjestelmän sisällä loogiisiin kokoelmiin ja näistä syntyvät kokoelmat tarjoavat halutun toiminnallisuuden.
 % kappaleessa myös patterneja
@@ -160,20 +159,19 @@ Ei-toiminnaliset vaatimukset tulevat esille vasta arkkitehtuurin avulla ja arkki
 Arkkitehtuurin avulla on mahdollista myös abstrahoida %HUOM
 osakkaille (stakeholder) ja muille kehittäjille ohjelmistojärjestelmää helpommin lähestyttäväksi, jolloin kommunikaatio eri osapuolten välillä helpottuu. Abstrahoinnin avulla pystytään yksinkertaistamaan järjestelmän konkreettista toteutusta ja suorittamaan arkkitehtuurista erittelyä (architectural decomposition), jossa muodostetaan epärelevanteista komponenteista mustia laatikoita (black box). Mustien laatikoiden ideana on piilottaa komponenttien sisäistä toteutusta eri tasoilla, jolloin arkkitehtuurista voidaan muodostaa eri abstraktiotason malleja.
 
-Hieman samanlainen jaottelu on määritelty myös Solmsin tutkimuksessa \citep[s. 369]{solms_what_2012}. Siinä ohjelmistoarkkitehtuuri-määritelmä jaetaan kolmeen eri määrittelyluokkaan: korkean tason abstraktioon ohjelmistojärjestelmästä, rakenteita sekä ulkoisia näkyviä ominaisuuksia korostavaan määritelmään ja peruskäsitteistöön sekä rajoitteisiin joiden puitteissa ohjelmistojärjestelmää kehitetään. Näistä kaksi ensimmäistä määritelmää vastaavat samoja kuin \citep[s. 2-7]{gorton_understanding_2011}, mutta tarkentaen kumpaakin omat kuvaustavat. Korkean tason abstraktioita mallinnetaan erilaisten näkymien kautta tai käyttämällä arkkitehtuurallisia malleja, jotka IEEE on määritellyt \cite{ieee_2000}. % IEEE:stä voisi kirjoittaa enemmän    
+Hieman samanlainen jaottelu on määritelty myös Solmsin tutkimuksessa \citep{solms_what_2012}. Siinä ohjelmistoarkkitehtuuri-määritelmä jaetaan kolmeen eri määrittelyluokkaan: korkean tason abstraktioon ohjelmistojärjestelmästä, rakenteita sekä ulkoisia näkyviä ominaisuuksia korostavaan määritelmään ja peruskäsitteistöön sekä rajoitteisiin joiden puitteissa ohjelmistojärjestelmää kehitetään. Näistä kaksi ensimmäistä määritelmää vastaavat samoja kuin \citep[s. 2-7]{gorton_understanding_2011}, mutta tarkentaen kumpaakin omat kuvaustavat. Korkean tason abstraktioita mallinnetaan erilaisten näkymien kautta tai käyttämällä arkkitehtuurallisia malleja, jotka IEEE on määritellyt \cite{ieee_2000}. % IEEE:stä voisi kirjoittaa enemmän    
 Rakenteita korostettaessa mallinnuksessa käytetään UML-kaavioita, koska UML määrittelee ohjelmiston arkkitehtuuria osina, joita pystytään rekursiivisesti tarkentamaan haluttaessa. Tarkennuksen avulla osat pystytään kuvaamaan kommunikoivan keskenään erilaisten rajapintojen kautta, osia yhdistäviä suhteita pystytään tarkastelemaan ja erilaisia rajoitteita pystytään luomaan osien välille. Kolmas määritelmä on paljon laajempi näkemys ohjelmistoarkkitehtuurista, koska se kuvaa ohjelmistojärjestelmän peruskäsitteistön ja ominaisuudet siinä ympäristössä, jossa ne ilmeentyvät elementtien, suhteiden ja suunnittelun periaatteiden kautta. Peruskäsitteistö tarjoaa sen käsitteistön, jonka avulla sovelluslogiikka voidaan määritellä. Ominaisuudet liittyvät usein ohjelmistojärjestelmän laadullisiin ominaisuuksiin. Periaatteet voidaan nähdä järjestelmän keskeisinä suunnittelurajoitteina (core design constraints), joiden kokonaisuus muodostaa järjestelmän arkkitehtuurisen tyylin. Ohjelmistojärjestelmän arkkitehtuurin tyyli voi esimerkiksi olla väylät ja suodattimet (pipes and filters). % lisää
 
-Näistä kahdesta eri jaottelusta ohjelmistoarkkitehtuuriin voidaan nähdä merkittävinä yhtäläisyyksinä tarpeen kuvata ohjelmiston rakenteellisuutta, komponenttien välistä kommunikaatiota ja laadullisia vaatimuksia. Kaikki nämä edellämainitut ominaisuudet on saatava  upotettua ohjelmistojärjestelmästä luotavaan arkkitehtuuriseen malliin niin, että ne vastaavat muunmuassa seuraaviin kysymyksiin \citep[s. 31 - 33]{Rozanski:2011:SSA:2072649}: mitkä ovat arkkitehtuurin toiminnalliset elementit; miten nämä elementit kommunikoivat keskenään ja ulkomaailman kanssa; mitä tietoa käsitellään, talletetaan ja esitetään; ja mitä fyysisiä ja ohjelmallisia elementtejä tarvitaan tukemaan näitä  elementtejä. Kuitenkaan arkkitehtuurista luotava malli ei saisi olla monoliittinen malli, joka pyrkii kuvamaan kaiken yhdessä mallissa, koska arkkitehtuuria ei ole mahdollista kuvata vain yhden mallin avulla. Tämä johtuu siitä, että monoliittinen malli on erittäin vaikea ymmärtää, siitä on vaikeaa löytää arkkitehtuurin tärkeimmät ominaisuudet (features) ja se on usein puutteelinen, jäljessä eikä vastaa enää nykyistä ohjelmistojärjestelmää. Ratkaisu tähän on jakaa malli useisiin toisiinsa liittyviin näkymiin (views), jotka esittävät jokainen yhden näkökulman (viewpoint) järjestelmän arkkitehtuuriin keräämällä yhteen toiminnalliset piirteet sekä laadulliset ominaisuudet \citetext{\citealp[s. 33-34]{Rozanski:2011:SSA:2072649}; \citealp[s. 8-9]{gorton_understanding_2011}}. Tämän avulla voidaan tarkastella saavuttaako järjestelmä sille asetetut tavoitteet.
+Näistä kahdesta eri jaottelusta ohjelmistoarkkitehtuuriin voidaan nähdä merkittävinä yhtäläisyyksinä tarpeen kuvata ohjelmiston rakenteellisuutta, komponenttien välistä kommunikaatiota ja laadullisia vaatimuksia. Kaikki nämä edellämainitut ominaisuudet on saatava  upotettua ohjelmistojärjestelmästä luotavaan arkkitehtuuriseen malliin niin, että ne vastaavat muunmuassa seuraaviin kysymyksiin \citep[s. 31 - 33]{Rozanski:2011:SSA:2072649}: mitkä ovat arkkitehtuurin toiminnalliset elementit; miten nämä elementit kommunikoivat keskenään ja ulkomaailman kanssa; mitä tietoa käsitellään, talletetaan ja esitetään; ja mitä fyysisiä ja ohjelmallisia elementtejä tarvitaan tukemaan näitä  elementtejä. Kuitenkaan arkkitehtuurista luotava malli ei saisi olla monoliittinen malli, joka pyrkii kuvamaan kaiken yhdessä mallissa, koska arkkitehtuuria ei ole mahdollista kuvata vain yhden mallin avulla. Tämä johtuu siitä, että monoliittinen malli on erittäin vaikea ymmärtää, siitä on vaikeaa löytää arkkitehtuurin tärkeimmät ominaisuudet (features) ja se on usein puutteelinen, jäljessä eikä vastaa enää nykyistä ohjelmistojärjestelmää. Ratkaisu tähän on jakaa malli useisiin toisiinsa liittyviin näkymiin (views), jotka esittävät jokainen yhden näkökulman (viewpoint) järjestelmän arkkitehtuuriin keräämällä yhteen toiminnalliset piirteet sekä laadulliset ominaisuudet \citetext{\citealp[s. 33-34]{Rozanski:2011:SSA:2072649}; \citealp[s. 8-9]{gorton_understanding_2011}; \citealp{Ran:1998:ASV:288408.2884381}}. Tämän avulla voidaan tarkastella saavuttaako järjestelmä sille asetetut tavoitteet.
 
 
 \subsection{Näkymät}
 
 Arkkitehtuuristen näkymien tehtävänä on kuvata ne näkökannat arkkitehtuurista, jotka ovat merkityksellisiä itse asialle, jota näkymä haluaa painottaa \citetext{\citealp{Rozanski:2011:SSA:2072649}; \citealp{may2005survey}}. Yksi tunnetuimmista määritelmistä arkkitehtuuriselle näkymälle on Krutchenin 4+1 näkymämalli (4+1 View Model) \citep[s.7]{gorton_understanding_2011}. Siinä arkkitehtuuri kuvataan neljän näkymän avulla: looginen, prosessi, fyysinen ja kehitys. Looginen näkymä kuvailee esimerkiksi luokkakaavioiden avulla ohjelmistojärjestelmän elementtejä ja niiden välisiä suhteita tarkentaen järjestelmän rakennetta, prosessinäkymä keskittyy ajonaikaisen suorituksen kuvaamiseen tarkentamalla muunmuassa miten samanaikaisuuden hallinta tapahtuu järjestelmässä, fyysinen näkymä keskittyy siihen miten järjestelmän eri komponentit kuvautuvat fyysiselle laitteistolle jossa komponenttia ajetaan ja lopuksi kehitysnäkymä (development view) keskittyy järjestelmän sisäiseen toteutukseen tarkemmalla tasolla kuvailemalla sisäkkäisia pakkauksia tai luokkahierarkiaa. Jokainen näkymä voidaan liittää osaksi toista näkymää skenaarioiden avulla, jotka heijastelevat järjestelmälle asetettuja vaatimuksia. 
 
-Muita näkymämalleja arkkitehtuuriin on useita, joista jokainen kuitenkin tuo esille vähintään jollain tavalla ohjelmistojärjestelmän rakennetta ja yhteyksiä. Tästä esimerkkinä \textit{Views and Beyond} -menetelmä \citep[s.8]{gorton_understanding_2011}. Siinä arkkitehtuurinen malli kuvataan kolmella eri näkymällä: moduuli, joka on järjestelmän rakenteellinen näkymä kuvaten muunmuassa luokkia, pakkauksia, moduulien hajoittamista (decomposition) sekä periytymistä; komponentti ja konnektori, joka kuvailee järjestelmän toiminnallista puolta; allokaatio, joka kuvailee miten prosessit kuvautuvat laitteistotasolla  ja miten ne kommunikoivat keskenään. 
+Muita näkymämalleja arkkitehtuuriin on useita, joista jokainen kuitenkin tuo esille vähintään jollain tavalla ohjelmistojärjestelmän rakennetta ja yhteyksiä. Tästä esimerkkinä yleisesti tunnettu \textit{Views and Beyond} -malli \citep[s.8]{gorton_understanding_2011}. Siinä arkkitehtuurinen malli kuvataan kolmella eri näkymällä: moduuli, joka on järjestelmän rakenteellinen näkymä kuvaten muunmuassa luokkia, pakkauksia, moduulien hajoittamista (decomposition) sekä periytymistä; komponentti ja konnektori, joka kuvailee järjestelmän toiminnallista puolta sekä miten komponentit ovat yhteydessä toisiinsa; allokaatio, joka kuvailee miten prosessit kuvautuvat laitteistotasolla  ja miten ne kommunikoivat keskenään. 
 
-Näiden kahden esitellyn mallin lisäksi löytyy joukko eri tarkoituksiin sopivia näkymämalleja, joilla on omat vahvuudet sekä heikkoudet. Yhteensä viittä eri mallia vertailtiin Mayn tutkimuksessa \citep{may2005survey}, jossa kartoitettiin mahdollisimman laajaa näkymien muodostamaa näkökulmien joukkoa, jotka kattaisivat mahdollisimman laajalti ohjelmistoarkkitehtuurin aluetta (domain). Vertailtavat arkkitehtuurit olivat 4+1-malli, SEI:n (Software Engineering Institute) \textit{Views and Beyond}, ISO:n (International Organization for Standardization) \textit{Reference Model of Open Distributed Processing}, Siemens'n \textit{Four View Model} ja \textit{Rational Architecture Description Specification}. 
-	
+Näiden kahden esitellyn mallin lisäksi on tottakai olemassa joukko eri tarkoituksiin sopivia näkymämalleja, joilla on omat vahvuudet sekä heikkoudet. Yhteensä viittä eri mallia vertailtiin Mayn tutkimuksessa \citep{may2005survey}, jossa kartoitettiin mahdollisimman laajaa näkymien muodostamaa näkökulmien joukkoa, jotka kattaisivat mahdollisimman laajalti ohjelmistoarkkitehtuurin aluetta (domain). Vertailtavat arkkitehtuurit olivat 4+1-malli, SEI:n (Software Engineering Institute) \textit{Views and Beyond}, ISO:n (International Organization for Standardization) \textit{Reference Model of Open Distributed Processing}, Siemens'n \textit{Four View Model} ja \textit{Rational Architecture Description Specification}. Malleja vertailtiin tutkimalla, että kuinka niiden tarjoamat näkökulmat painottavat kolmeen eri kategoriaan liittyviä asioita: sidosryhmät, laadulliset tekijät ja rakenteelliset ominaisuudet. Joukko, joka painotti mahdollisimman laajasti jokaisen osa-alueen ominaisuuksia muodostettiin lopulta seuraavista osista: \textit{Views and Beyond} -mallin kaikki kolme näkymää ja \textit{Rational ADS}:n vaatimukset-näkökulma (requirements viewpoint). Syy miksi juuri nämä valittiin oli se, että \textit{Views and Beyond} sopii erittäin hyvin mallin pohjaksi, koska se kuvaa järjestelmän rakennetta kattavasti, sen näkökulmat ovat itsenäisiä ja se kokonaisuudessaan limittyy hyvin 4+1-mallin sekä Siemens'n mallin kanssa. Kuitenkaan se ei sisällä tarvittavia näkymiä kuvaamaan eri sidosryhmille tärkeitä asioita, kuten esimerkiksi loppukäyttäjiä varten oleva näkymä puuttuu kokonaan. Tämän takia mukaan on otettu \textit{Rational ADS}, jonka vaatimukset-näkökulma koostuu neljästä eri näkymästä: ei-toiminnalliset vaatimukset, alue (domain), käyttötapaus ja käyttökokemus. 
 	Näkökulmat (viewpoints) liittyvät vahvasti arkkitehtuurisin näkymiin
 
 
