--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -82,6 +82,55 @@
  acmid = {288438},
  publisher = {ACM},
  address = {New York, NY, USA},
- keywords = {architectural views, requirements, software architecture, structures of software},
+ keywords = {architectural views, requirements, software architecture, structures of software}
 } 
+
+@INPROCEEDINGS{ARaHVeSCiSDu, 
+author={A. Razavizadeh and H. Verjus and S. Cimpan and S. Ducasse}, 
+booktitle={Software Architecture, 2009 European Conference on Software Architecture. WICSA/ECSA 2009. Joint Working IEEE/IFIP Conference on}, 
+title={Multiple viewpoints architecture extraction}, 
+year={2009}, 
+pages={329-332}, 
+keywords={reverse engineering;software architecture;domain knowledge;recursive framework;software system architecture;software system comprehension;viewpoints architecture extraction;Computer architecture;Computer bugs;Data mining;Europe;Information resources;Object oriented modeling;Phase measurement;Software architecture;Software systems;Time measurement}, 
+doi={10.1109/WICSA.2009.5290676}, 
+month={Sept},
+}
+
+@inproceedings{Brondum:2010:TAV:1833335.1833344,
+ author = {Br{\o}ndum, John and Zhu, Liming},
+ title = {Towards an Architectural Viewpoint for Systems of Software Intensive Systems},
+ booktitle = {Proceedings of the 2010 ICSE Workshop on Sharing and Reusing Architectural Knowledge},
+ series = {SHARK '10},
+ year = {2010},
+ isbn = {978-1-60558-967-1},
+ location = {Cape Town, South Africa},
+ pages = {60--63},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/1833335.1833344},
+ doi = {10.1145/1833335.1833344},
+ acmid = {1833344},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {software architecture, systems-of-systems}
+} 
+
+@inproceedings{Galster:2011:DTC:2031759.2031761,
+ author = {Galster, Matthias},
+ title = {Dependencies, Traceability and Consistency in Software Architecture: Towards a View-based Perspective},
+ booktitle = {Proceedings of the 5th European Conference on Software Architecture: Companion Volume},
+ series = {ECSA '11},
+ year = {2011},
+ isbn = {978-1-4503-0618-8},
+ location = {Essen, Germany},
+ pages = {1:1--1:4},
+ articleno = {1},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/2031759.2031761},
+ doi = {10.1145/2031759.2031761},
+ acmid = {2031761},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {architecture viewpoints, consistency, dependencies, software architecture, traceability}
+} 
+
 
